--- a/public/css/feedVagas.css
+++ b/public/css/feedVagas.css
@@ -64,7 +64,7 @@ body {
 /* Header */
 .divHeaderFather {
     width: 100%;
-    height: 5rem;
+    height: 4rem;
     position: fixed;
     background-color: var(--darkGrey);
     align-items: center;
@@ -82,8 +82,8 @@ body {
 }
 
 .buttonHeader {
-    height: 45px;
-    width: 200px;
+    height: 2rem;
+    width: 10rem;
     background-color: var(--lightBlue);
     border-radius: 10px;
     border-style: none;
@@ -108,15 +108,20 @@ body {
 }
 
 .imgIcon {
-    height: 45px;
+    height: 2rem;
     margin: 0px;
 }
 
 .imgProfile {
-    height: 52px;
+    height: 2.2rem;
     margin: 0px;
     display: flex;
     align-items: center;
+}
+
+.logo {
+    height: 2.2rem;
+    margin: 0px;
 }
 
 /* Side Bar */
