--- a/Site/public/css/feedVagas.css
+++ b/Site/public/css/feedVagas.css
@@ -48,7 +48,8 @@
 
 /* Scrollbar Configuration */
 ::-webkit-scrollbar {
-    height: 1, 25rem;
+    width: 0.5rem;
+    height: 1.25rem;
     background-color: #ffffff05;
 }
 
@@ -167,6 +168,7 @@ body {
 }
 
 .bigTitle {
+    margin: 0;
     font-family: var(--bold);
     font-size: var(--regularTitle);
     color: var(--white);
@@ -177,7 +179,7 @@ body {
     font-size: var(--regularTitle);
     color: var(--white);
     margin: 0;
-    padding-bottom: 0.5%;
+    padding-bottom: 1%;
 }
 
 .subtitle {
@@ -280,7 +282,7 @@ body {
 .divVaga {
     width: 100%;
     height: 31.25rem;
-    padding: 1%;
+    padding: 1.5% 2% 2.5% 2%;
     border-radius: 5px;
     background-color: var(--mediumGrey);
     display: flex;
@@ -311,14 +313,16 @@ body {
 }
 
 .profileName {
+    text-align: center;
     padding-top: 5%;
     font-family: var(--regular);
-    font-size: var(--smallText);
+    font-size: 70%;
     color: var(--white);
+    margin: 0;
 }
 
 .divDescriptionFormatter {
-    width: 100%;
+    width: 99%;
     height: 18.75rem;
     font-family: var(--regular);
     font-size: var(--smallText);
@@ -327,6 +331,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    float: right;
 }
 
 .divDescription {
