--- a/Site/public/css/headerInstitucional.css
+++ b/Site/public/css/headerInstitucional.css
@@ -1,31 +1,153 @@
 
 @font-face {
-    font-family: 'Poppins-Regular';
-    src: url(../fonts/Poppins-Regular.ttf);
+    font-family: 'Poppins-Medium';
+    src: url(../fonts/Poppins-Medium.ttf);
     font-family: 'Poppins-Bold';
     src: url(../fonts/Poppins-Bold.ttf);
 }
-.divHeader {
-    font-family: 'Poppins-Bold';
-    justify-content: center;
+
+/* Variables */
+:root {
+    /* Colors */
+    --backGroundGrey: #272727;
+    --darkGrey: #171717;
+    --mediumGrey: #383838;
+    --lightGrey: #4E4E4E;
+    --lightBlue: #1E9CD7;
+    --lightPurple: #861ED7;
+    --white: #ffffff;
+
+    --blueTag: #69E3E8;
+    --purpleTag: #7B69E8;
+    --yellowTag: #FFC700;
+    --redTag: #E86969;
+
+    /* Margin */
+    --xxsMargin: 1%;
+    --xsMargin: 2%;
+    --sMargin: 5%;
+    --mMargin: 10%;
+    --lMargin: 20%;
+    --xlMargin: 30%;
+    --xxlMargin: 50%;
+
+    /* Font Size */
+    --bigTitle: 2.5rem;
+    /* Use with font-family: var(--bold) */
+    --regularTitle: 2rem;
+    /* Use with font-family: var(--bold) */
+    --subtitle: 1.2rem;
+    /* Use with font-family: var(--bold) */
+    --smallSubtitle: 1rem;
+    /* Use with font-family: var(--bold) */
+    --bigText: 1.5rem;
+    /* Use with font-family: var(--regular) */
+    --smallText: 0.8rem;
+    /* Use with font-family: var(--regular) */
+    --extraSmallText: 0.7rem;
+    /* Use with font-family: var(--regular) */
+
+    /* Font Family */
+    --bold: 'Poppins-Bold';
+    --regular: 'Poppins-Medium';
+}
+
+/* Scrollbar Configuration */
+::-webkit-scrollbar {
+    width: 0.5rem;
+    height: 1.25rem;
+    background-color: #ffffff05;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #ffffffaf;
+    border-radius: 10px;
+}
+
+/* Body */
+body {
+    margin: 0;
+    background-color: var(--backGroundGrey);
+}
+
+/* Header */
+.divHeaderFather {
+    width: 100%;
+    height: 4rem;
+    position: fixed;
+    background-color: var(--darkGrey);
+    align-items: center;
+    text-align: center;
+    z-index: 2;
+}
+
+.divHeaderContainer {
+    max-width: 90%;
+    height: 100%;
+    margin: 0 auto;
     display: flex;
     align-items: center;
-    height: 13vh;
-    width: 98vw;
+    justify-content: space-between;
 }
-.botao{
-    background-color: #1E9CD7;
-    border-radius: 8px;
-    margin-left: 30px;
-    width: 120px;
+
+.buttonHeader {
+    height: 2rem;
+    width: 10rem;
+    background-color: var(--lightBlue);
+    border-radius: 10px;
+    border-style: none;
+    font-size: var(--subtitle);
+    font-family: var(--bold);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: 0.5s;
 }
-.botao:hover{
-    background-color: #9300FF;
-    height: 25px;
+
+.buttonHeaderInvisible {
+    height: 2rem;
+    width: 10rem;
+    background-color: var(--darkGrey);
+    border-radius: 10px;
+    border-style: none;
+    font-size: var(--subtitle);
+    font-family: var(--bold);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: 0.5s;
+}
+
+.buttonHeader:hover {
+    background-color: var(--lightPurple);
     cursor: pointer;
-    transition: 1s;
-    transform: scale(1.2);
 }
+
+.divButtons {
+    width: 48, 75rem;
+    display: flex;
+    align-items: center;
+    justify-content: right;
+}
+
+.imgIcon {
+    height: 2rem;
+    margin: 0;
+}
+
+.imgProfile {
+    height: 2.2rem;
+    margin: 0;
+    display: flex;
+    align-items: center;
+}
+
+.logo {
+    height: 2.2rem;
+    margin: 0px;
+}
+
+
 .li-comum {
     color: white;
     font-size: 1rem;
@@ -33,49 +155,4 @@
     cursor: pointer;
 }
 
-.container-header {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    text-align: center;
-    align-items: center;
-
-    height: 10vh;
-    width: 85vw;
-}
-
-/*Imagem*/
-
-img {
-  
-    margin: 0;
-}
-
-.divImagem img {
-    cursor: pointer;
-    width: 10vw;
-}
-
-/*Lista*/
-
-ul {
-    padding: 0;
-    margin: 0;
-}
-
-.divLista ul {
-    list-style: none;
-    margin: 0;
-
-
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    text-align: center;
-
-    width: 35vw;
-
-}
 
