--- a/Site/public/css/feedVagasVaga.css
+++ b/Site/public/css/feedVagasVaga.css
@@ -63,9 +63,7 @@
 }
 
 .divVagaBody {
-    padding: 1.5rem;
-    max-width: 80%;
-    width: 70rem;
+    width: 90%;
     height: 100rem;
     margin-top: 8rem;
     margin-bottom: 4rem;
