--- a/Site/public/css/feedVagasVaga.css
+++ b/Site/public/css/feedVagasVaga.css
@@ -22,13 +22,13 @@
     --redTag: #E86969;
 
     /* Margin */
-    --xxsMargin: 1rem;
-    --xsMargin: 1.5rem;
-    --sMargin: 2rem;
-    --mMargin: 2.5rem;
-    --lMargin: 3rem;
-    --xlMargin: 4rem;
-    --xxlMargin: 4.5rem;
+    --xxsMargin: 16px;
+    --xsMargin: 24px;
+    --sMargin: 32px;
+    --mMargin: 40px;
+    --lMargin: 48px;
+    --xlMargin: 56px;
+    --xxlMargin: 64px;
 
     /* Font Size */
     --bigTitle: 2.5rem;
@@ -43,7 +43,7 @@
     /* Use with font-family: var(--bold) */
     --smallText: 0.8rem;
     /* Use with font-family: var(--regular) */
-    --extraSmallText: 0.7rem;
+    --extraSmallText: 0.6rem;
     /* Use with font-family: var(--regular) */
 
     /* Font Family */
@@ -51,7 +51,7 @@
     --regular: 'Poppins-Medium';
 }
 
-/* Vaga "ver mais" */
+/* ----------------------------------------------- */
 
 .divVagaFather {
     width: 100%;
@@ -78,12 +78,19 @@
 }
 
 .divVagaContent {
-    width: 43.75rem;
+    width: 80%;
     height: 100rem;
-    background-color: rgba(166, 0, 255, 0.322);
     display: flex;
+    flex-direction: column;
     align-items: flex-start;
+}
+
+.divPageTitle {
+    display: flex;
     justify-content: center;
+    width: 100%;
+    margin: 0;
+    padding-bottom: 48px;
 }
 
 .pageTitle {
@@ -91,5 +98,155 @@
     font-size: var(--regularTitle);
     color: var(--white);
     margin: 0;
-    padding-bottom: var(--xxsMargin);
+}
+
+/* ----------------------------------------------- */
+
+.divSpaceBetween {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0;
+}
+
+.divSmallBox {
+    height: auto;
+    width: 30%;
+    margin: 0;
+}
+
+.divTitle {
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    margin: 0;
+}
+
+.subtitle {
+    font-family: var(--bold);
+    font-size: var(--subtitle);
+    color: var(--white);
+    margin: 0;
+}
+
+.divTitle img {
+    height: 1.2rem;
+    margin-left: var(--xsMargin);
+}
+
+.divInputFormatter {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    background-color: var(--lightGrey);
+    margin-top: 32px;
+    margin-bottom: 48px;
+    border-radius: 4px;
+}
+
+.divInput {
+    width: 95%;
+    height: 3rem;
+    display: flex;
+    align-items: center;
+    justify-content: left;
+}
+
+.smallText {
+    font-family: var(--regular);
+    font-size: var(--smallText);
+    color: var(--white);
+    margin: 0;
+}
+
+/* ----------------------------------------------- */
+
+.divBigBox {
+    height: auto;
+    width: 100%;
+    margin: 0;
+}
+
+.divBigInput {
+    width: 98.5%;
+    margin-top: 0.75%;
+    margin-bottom: 0.75%;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: left;
+}
+
+@media screen and (max-width: 1000px) {
+
+    .divVagaBody {
+        margin-top: 5.56rem;
+        margin-bottom: 2.78rem;
+        padding-top: 4.34rem;
+        padding-bottom: 4.34rem;
+    }
+
+    .smallText {
+        font-size: var(--extraSmallText);
+    }
+}
+
+@media screen and (max-width: 750px) {
+
+    .divVagaBody {
+        margin-top: 4.1rem;
+        margin-bottom: 2.05rem;
+        padding-top: 3.2rem;
+        padding-bottom: 3.2rem;
+    }
+
+    .pageTitle {
+        font-size: var(--bigText);
+    }
+
+    .divSpaceBetween {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .divSmallBox {
+        width: 100%;
+    }
+
+    .divBigInput {
+        width: 95%;
+        margin-top: 2.5%;
+        margin-bottom: 2.5%;
+    }
+}
+
+@media screen and (max-width: 450px) {
+
+    .divVagaBody {
+        margin-top: 2.56rem;
+        margin-bottom: 1.28rem;
+        padding-top: 2rem;
+        padding-bottom: 2rem;
+    }
+
+    .divPageTitle {
+        padding-bottom: 24px;
+    }
+
+    .pageTitle {
+        font-size: var(--subtitle);
+    }
+
+    .subtitle {
+        font-size: var(--smallSubtitle);
+    }
+
+    .divInputFormatter {
+        margin-top: 16px;
+        margin-bottom: 24px;
+    }
+
 }
