--- a/Site/public/css/index.css
+++ b/Site/public/css/index.css
@@ -1,8 +1,10 @@
 body{
     font-family: 'Poppins-Regular';
-    font-size: 1rem;
+    margin: 0;
+    padding: 0;
     background-color: #272727;
 }
+
 @font-face {
     font-family: 'Poppins-Regular';
     src: url(./fonts/Poppins-Regular.ttf);
