--- a/Site/public/css/feedVagas.css
+++ b/Site/public/css/feedVagas.css
@@ -17,115 +17,42 @@
     --white: #ffffff;
 
     --blueTag: #69E3E8;
-    --purpleTag: #7B69E8;
+    --purpleTag: #4c2dfa;
     --yellowTag: #FFC700;
     --redTag: #E86969;
 
     /* Margin */
-    --xxsMargin: 1%;
-    --xsMargin: 2%;
-    --sMargin: 5%;
-    --mMargin: 10%;
-    --lMargin: 20%;
-    --xlMargin: 30%;
-    --xxlMargin: 50%;
+    --xxsMargin: 16px;
+    --xsMargin: 24px;
+    --sMargin: 32px;
+    --mMargin: 40px;
+    --lMargin: 48px;
+    --xlMargin: 56px;
+    --xxlMargin: 64px;
 
     /* Font Size */
     --bigTitle: 2.5rem;
     /* Use with font-family: var(--bold) */
     --regularTitle: 2rem;
     /* Use with font-family: var(--bold) */
+    --bigText: 1.5rem;
+    /* Use with font-family: var(--regular) */
     --subtitle: 1.2rem;
     /* Use with font-family: var(--bold) */
     --smallSubtitle: 1rem;
     /* Use with font-family: var(--bold) */
-    --bigText: 1.5rem;
-    /* Use with font-family: var(--regular) */
     --smallText: 0.8rem;
     /* Use with font-family: var(--regular) */
-    --extraSmallText: 0.7rem;
+    --extraSmallText: 0.6rem;
+    /* Use with font-family: var(--regular) */
+    --miniText: 0.5rem;
+    /* Use with font-family: var(--regular) */
+    --microText: 0.42rem;
     /* Use with font-family: var(--regular) */
 
     /* Font Family */
     --bold: 'Poppins-Bold';
     --regular: 'Poppins-Medium';
-}
-
-/* Header */
-.divHeaderFather {
-    width: 100%;
-    height: 4rem;
-    position: fixed;
-    background-color: var(--darkGrey);
-    align-items: center;
-    text-align: center;
-    z-index: 2;
-}
-
-.divHeaderContainer {
-    max-width: 90%;
-    height: 100%;
-    margin: 0 auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.buttonHeader {
-    height: 2rem;
-    width: 10rem;
-    background-color: var(--lightBlue);
-    border-radius: 10px;
-    border-style: none;
-    font-size: var(--subtitle);
-    font-family: var(--bold);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: 0.5s;
-}
-
-.buttonHeaderInvisible {
-    height: 2rem;
-    width: 10rem;
-    background-color: var(--darkGrey);
-    border-radius: 10px;
-    border-style: none;
-    font-size: var(--subtitle);
-    font-family: var(--bold);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: 0.5s;
-}
-
-.buttonHeader:hover {
-    background-color: var(--lightPurple);
-    cursor: pointer;
-}
-
-.divButtons {
-    width: 48, 75rem;
-    display: flex;
-    align-items: center;
-    justify-content: right;
-}
-
-.imgIcon {
-    height: 2rem;
-    margin: 0;
-}
-
-.imgProfile {
-    height: 2.2rem;
-    margin: 0;
-    display: flex;
-    align-items: center;
-}
-
-.logo {
-    height: 2.2rem;
-    margin: 0px;
 }
 
 /* Side Bar */
@@ -282,8 +209,8 @@
 
 .divVaga {
     width: 100%;
-    height: 31.25rem;
-    padding: 1.5% 2% 2.5% 2%;
+    height: auto;
+    padding: 1.5% 2% 2% 2%;
     border-radius: 5px;
     background-color: var(--mediumGrey);
     display: flex;
@@ -305,25 +232,19 @@
 
 .divVagaContent {
     width: 89%;
+    height: auto;
     margin-left: 1%;
-    height: 28.125rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .profilePicture {
     width: 100%;
 }
 
-.profileName {
-    text-align: center;
-    padding-top: 5%;
-    font-family: var(--regular);
-    font-size: 70%;
-    color: var(--white);
-    margin: 0;
-}
-
 .divDescriptionFormatter {
-    width: 99%;
+    width: 100%;
     height: 18.75rem;
     font-family: var(--regular);
     font-size: var(--smallText);
@@ -343,22 +264,22 @@
 
 .divTagsFormatter {
     width: 100%;
-    height: 6rem;
+    height: auto;
     display: flex;
     align-items: center;
-    margin-left: 1%;
-    overflow-x: auto;
+    margin: 0;
 }
 
 .divTags {
     width: 97%;
-    height: 2.1875rem;
+    height: auto;
     display: flex;
     flex-direction: row;
-    margin: 0;
+    flex-wrap: wrap;
+    margin: 0.5rem 0.15rem 0.5rem 0rem;
 }
 
-.exempleTag {
+.tagDev {
     height: 2.1875rem;
     width: 6rem;
     background-color: #ffffff00;
@@ -373,10 +294,79 @@
     align-items: center;
     justify-content: center;
     transition: 0.5s;
-    margin-right: 2%;
+    margin: 0.5rem 0.5rem 0.5rem 0.5rem;
 }
 
-.exempleTag:hover {
+.tagDev:hover {
+    background-color: var(--white);
+    cursor: pointer;
+}
+
+.tagPlatform {
+    height: 2.1875rem;
+    width: 6rem;
+    background-color: #ffffff00;
+    border-radius: 2px;
+    border-color: var(--purpleTag);
+    border-style: solid;
+    border-width: 0.14rem;
+    font-size: var(--extraSmallText);
+    font-family: var(--regular);
+    color: var(--purpleTag);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: 0.5s;
+    margin: 0.5rem 0.5rem 0.5rem 0.5rem;
+}
+
+.tagPlatform:hover {
+    background-color: var(--white);
+    cursor: pointer;
+}
+
+.tagBusyness {
+    height: 2.1875rem;
+    width: 6rem;
+    background-color: #ffffff00;
+    border-radius: 2px;
+    border-color: var(--yellowTag);
+    border-style: solid;
+    border-width: 0.14rem;
+    font-size: var(--extraSmallText);
+    font-family: var(--regular);
+    color: var(--yellowTag);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: 0.5s;
+    margin: 0.5rem 0.5rem 0.5rem 0.5rem;
+}
+
+.tagBusyness:hover {
+    background-color: var(--white);
+    cursor: pointer;
+}
+
+.tagArea {
+    height: 2.1875rem;
+    width: 6rem;
+    background-color: #ffffff00;
+    border-radius: 2px;
+    border-color: var(--redTag);
+    border-style: solid;
+    border-width: 0.14rem;
+    font-size: var(--extraSmallText);
+    font-family: var(--regular);
+    color: var(--redTag);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: 0.5s;
+    margin: 0.5rem 0.5rem 0.5rem 0.5rem;
+}
+
+.tagArea:hover {
     background-color: var(--white);
     cursor: pointer;
 }
@@ -393,6 +383,7 @@
     align-items: center;
     justify-content: center;
     transition: 0.5s;
+    padding: 0;
 }
 
 .alternativeButton:hover {
@@ -412,7 +403,6 @@
     display: flex;
     align-items: center;
     justify-content: left;
-    margin-left: 1%;
 }
 
 /* Vaga "ver mais" */
@@ -437,4 +427,284 @@
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+/* ----------------------------------------------- */
+/* ----------------------------------------------- */
+/* ----------------------------------------------- */
+
+@media screen and (max-width: 1400px) {
+
+    /* Side Bar */
+    .bigTitle {
+        margin: 0;
+        font-family: var(--bold);
+        font-size: var(--bigText);
+        color: var(--white);
+    }
+
+    .bigTitle2 {
+        font-family: var(--bold);
+        font-size: var(--bigText);
+        color: var(--white);
+        margin: 0;
+        padding-bottom: 1%;
+    }
+
+    .subtitle {
+        font-family: var(--bold);
+        font-size: var(--smallSubtitle);
+        color: var(--white);
+        margin-top: 1rem;
+    }
+
+    .imgIcon2 {
+        height: 1.5rem;
+        margin: 0;
+        transition: 0.5s;
+    }
+
+    .marginBox {
+        height: var(--xsMargin);
+    }
+
+    .boxInline {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .boxCheckbox {
+        display: flex;
+        align-items: center;
+    }
+
+    .smallText {
+        font-family: var(--bold);
+        font-size: var(--smallText);
+        color: var(--white);
+    }
+
+    .searchBar {
+        font-size: var(--smallText);
+    }
+    
+    .searchBarSmall {
+        font-size: var(--smallText);
+    }
+}
+
+/* ----------------------------------------------- */
+/* ----------------------------------------------- */
+/* ----------------------------------------------- */
+
+@media screen and (max-width: 1025px) {
+        /* Side Bar */
+        .bigTitle {
+            margin: 0;
+            font-family: var(--bold);
+            font-size: var(--subtitle);
+            color: var(--white);
+        }
+    
+        .bigTitle2 {
+            font-family: var(--bold);
+            font-size: var(--subtitle);
+            color: var(--white);
+            margin: 0;
+            padding-bottom: 1%;
+        }
+    
+        .subtitle {
+            font-family: var(--bold);
+            font-size: var(--smallText);
+            color: var(--white);
+            margin-top: 1rem;
+        }
+    
+        .imgIcon2 {
+            height: 1.2rem;
+            margin: 0;
+            transition: 0.5s;
+        }
+
+        .searchBar {
+            height: 2rem;
+            width: 100%;
+            font-size: var(--smallText);
+        }
+        
+        .searchBarSmall {
+            height: 2rem;
+            width: 60%;
+            font-size: var(--smallText);
+        }
+
+        /* Feed */
+        .divVagaContent {
+            width: 88%;
+            margin-left: 2%;
+        }
+
+        .divDescriptionFormatter {
+            width: 100%;
+            height: 18.75rem;
+            font-family: var(--regular);
+            font-size: var(--smallText);
+            color: var(--white);
+            background-color: var(--lightGrey);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            float: right;
+        }
+        
+        .divDescription {
+            width: 97%;
+            height: 100%;
+            overflow-y: auto;
+        }
+        
+        .divTagsFormatter {
+            width: 100%;
+            height: auto;
+            display: flex;
+            align-items: center;
+            margin: 0;
+        }
+        
+        .divTags {
+            width: 97%;
+            height: auto;
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            margin: 0.5rem 0.15rem 0.5rem 0rem;
+        }
+        
+        .tagDev {
+            height: 2.1875rem;
+            width: 6rem;
+            background-color: #ffffff00;
+            border-radius: 2px;
+            border-color: var(--blueTag);
+            border-style: solid;
+            border-width: 0.14rem;
+            font-size: var(--extraSmallText);
+            font-family: var(--regular);
+            color: var(--blueTag);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: 0.5s;
+            margin: 0.5rem 0.5rem 0.5rem 0.5rem;
+        }
+        
+        .tagDev:hover {
+            background-color: var(--white);
+            cursor: pointer;
+        }
+        
+        .tagPlatform {
+            height: 2.1875rem;
+            width: 6rem;
+            background-color: #ffffff00;
+            border-radius: 2px;
+            border-color: var(--purpleTag);
+            border-style: solid;
+            border-width: 0.14rem;
+            font-size: var(--extraSmallText);
+            font-family: var(--regular);
+            color: var(--purpleTag);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: 0.5s;
+            margin: 0.5rem 0.5rem 0.5rem 0.5rem;
+        }
+        
+        .tagPlatform:hover {
+            background-color: var(--white);
+            cursor: pointer;
+        }
+        
+        .tagBusyness {
+            height: 2.1875rem;
+            width: 6rem;
+            background-color: #ffffff00;
+            border-radius: 2px;
+            border-color: var(--yellowTag);
+            border-style: solid;
+            border-width: 0.14rem;
+            font-size: var(--extraSmallText);
+            font-family: var(--regular);
+            color: var(--yellowTag);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: 0.5s;
+            margin: 0.5rem 0.5rem 0.5rem 0.5rem;
+        }
+        
+        .tagBusyness:hover {
+            background-color: var(--white);
+            cursor: pointer;
+        }
+        
+        .tagArea {
+            height: 2.1875rem;
+            width: 6rem;
+            background-color: #ffffff00;
+            border-radius: 2px;
+            border-color: var(--redTag);
+            border-style: solid;
+            border-width: 0.14rem;
+            font-size: var(--extraSmallText);
+            font-family: var(--regular);
+            color: var(--redTag);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: 0.5s;
+            margin: 0.5rem 0.5rem 0.5rem 0.5rem;
+        }
+        
+        .tagArea:hover {
+            background-color: var(--white);
+            cursor: pointer;
+        }
+        
+        .alternativeButton {
+            height: 3rem;
+            width: 10rem;
+            background-color: var(--lightBlue);
+            border-radius: 2px;
+            border-style: none;
+            font-size: var(--subtitle);
+            font-family: var(--bold);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: 0.5s;
+            padding: 0;
+        }
+        
+        .alternativeButton:hover {
+            background-color: var(--lightPurple);
+            cursor: pointer;
+        }
+        
+        .divPayment {
+            height: 3rem;
+            width: 21.5rem;
+            background-color: var(--lightGrey);
+            font-family: var(--regular);
+            font-size: var(--smallText);
+            color: var(--white);
+            border-radius: 2px;
+            border: none;
+            display: flex;
+            align-items: center;
+            justify-content: left;
+        }
 }
